access-control/Gatekeeper/deployment/replicas/required-replicas.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredreplicas
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredReplicas
      validation:
        openAPIV3Schema:
          type: object
          properties:
             replicas:
              type: object
              properties:
                 minReplicas:
                   type: integer
                 maxReplicas:
                   type: integer
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredreplicas
      
      violation[{"msg": msg}]{
        provided := input.review.object.spec.replicas
        min := input.parameters.replicas.minReplicas
       
        provided < min
        msg := sprintf("You must provide replicas min %v but you'r %v", [min, provided])
      }
      
      violation[{"msg": msg}]{
        provided := input.review.object.spec.replicas
        max := input.parameters.replicas.maxReplicas
        
        provided > max
        msg := sprintf("You must provide replicas max %v but you're %v",[max, provided])
      }
